@@ -4,7 +4,8 @@
 
 \title{Detrend a set of observations}
 
-\description{Detrend a set of observations}
+\description{Detrend a set of observations, which can be useful in operations
+    that are thrown off by endpoints, e.g. digital filtering.}
 
 \usage{detrend(x, y)}
 
@@ -14,18 +15,24 @@
   \item{y}{an optional vector}
 }
 
-\details{Detrends \code{y} by subtracting a linear trend in \code{x}, to make \code{y[1]=0} and
-    \code{y[length(y)]=0}.  If \code{y} is not given, then y is taken from x, and x is set to the
-    series of integers from 1 to \code{length{x}}.}
+\details{Detrends \code{y} by subtracting a linear trend in \code{x}, to create
+    \code{Y} that has \code{Y[1]=0} and \code{Y[length(Y)]=0}.  If \code{y} is
+    not given, then y is taken from x, and x is set to the series of integers
+    from 1 to \code{length{x}}.}
     
-\value{A new vector that is is zero at the start and end.}
+\value{A list containing \code{Y}, the detrended version of \code{y}, and the
+    intercept \code{a} and slope \code{b} of the linear function of \code{x}
+    that is subtracted from \code{y} to yield \code{Y}.}
 
 \examples{
 x <- seq(0, 0.9 * pi, length.out=50)
 y <- sin(x)
 plot(x, y)
-lines(x, detrend(y), col='gray')
+d <- detrend(x, y)
+points(x, d$Y, pch=20)
 abline(h=0, lty='dotted')
+abline(d$a, d$b, col='red')
+points(x, d$Y + d$a + d$b * x, col='blue', pch='+')
 }
 
 \author{Dan Kelley}
